--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,8 +65,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}      
+          username: ${{ secrets.haunspaw3 }}
+          password: ${{ secrets.DOCKERTOKEN }}      
       # Building and pushing the image
       - name: Build and push
         uses: docker/build-push-action@v3
