--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,4 +76,5 @@ jobs:
           push: true
           # Pushing this to the wsu-gh-actions-demo repo in the sakahle project on DockerHub
           # uniquely tagged with the current commit hash.
-          tags: wsukduncan/workpro-service:${{ github.sha }}
+          #tags: wsukduncan/workpro-service:${{ github.sha }}
+          tags: wsukduncan/workpro-service:base
